# AED2

aed2/: CMakeLists.txt  README.md
aed2/include/: dados.h  espaconave.h  filaDePrioridades.h  interface.h  leitorDeArquivo.h  listaDePassageiros.h  listaDeRecursos.h
aed2/public/: filainfo.txt
aed2/src/: dados.c  espaconave.c  filaDePrioridades.c  interface.c  leitorDeArquivo.c  listaDePassageiros.c  listaDeRecursos.c  main.c
